barcode scan by google ml-kit for all type of QR

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,19 @@
         android:layout_height="50dp"
         android:layout_margin="16dp"
         android:src="@drawable/ic_flip"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/flash"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_flash_on"
+        android:visibility="gone"
+        android:layout_margin="16dp"
+        android:contentDescription="Flashlight Toggle"
+        app:layout_constraintStart_toEndOf="@id/flip"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <ImageView
@@ -49,6 +59,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+
 
     <ImageView
         android:id="@+id/ic_scan"
