--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#03A8F4</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="green">#4CAF50</color>
+    <color name="skyblue">#00BCD4</color>
+    <color name="red">#E91E63</color>
+    <color name="purple">#673AB7</color>
 </resources>
